Added statement about Firefox test setup

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -209,8 +209,10 @@
         and determine whether or not CrashSimulator was able to identify them. As a side effect, this process also
         yielded a number of new bugs that were previously unreported in these projects' bug trackers.
 
-        % TODO: complete
         \subsection{Firefox}
+
+            For this evaluation, the same Firefox test setup as was described in the Firefox performance evaluation was
+            used.
 
             \textbf{\emph{Note: This is fake data. Also, I would like to have better ways of quantifying some of this}}
             From Firefox's bug tracker 10 bugs in the ``networking'' category with successful resolutions were selected
