Stub paragraph for Test Suite Improvement section

--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -299,8 +299,15 @@
 
     \subsection{Test Coverage Improvement}
 
-        A final way CrashSimulator was evaluated was on the basis of how many ``unit tests'' it was able to add to the
-        existing test suites of open source applications that have test suites available.
+        \textbf{\emph{There needs to be more exploration put into this test methodology. Much more description needs to
+        be written.}}
+
+        A final way CrashSimulator was evaluated was on the extent to which it was able to improve upon the existing
+        unit test suites of major applications make them available publicly. At a high level, this evaluation was
+        performed as follows. The unit test suites of Firefox and Apache were reviewed and a count was made of tests
+        that fell into CrashSimulator's domain was made. Next, a CrashSimulator was run against each application and a
+        count of tests performed was recorded. These values were used to determine a percent increase number of useful
+        tests ``added'' through the use of CrashSimulator
 
     \subsection{Limitations}
 
