Distributed TODO items to appropriate files

--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -1,3 +1,6 @@
+% TODO: Do a diagram that explains the architecture of the system
+% TODO: rework architecture to talk more about NetCheck
+
 \section{CrashSimulator Approach Details}
 
     % TODO: Verify information on supported trace formats
