--- a/CSBackgroundAndMotivation.tex
+++ b/CSBackgroundAndMotivation.tex
@@ -1,4 +1,11 @@
 % TODO: Re-read and rework
+% TODO: Background And Motivation: Come up with some concrete examples
+%    Linux app that runs fine on one network but not another
+%    Write this as section II.d
+%    Some sort of diagram
+%    Talk at a high level -> likely to change depending on the evaluation
+
+
 \section{Background and Motivation}
 
     %%This sentence is very similar to the one from the Sniper paper
