--- a/CSEvaluation.tex
+++ b/CSEvaluation.tex
@@ -1,3 +1,12 @@
+
+% TODO: Evaluation: Time the amount of time to run the tests
+% TODO: Evaluation: Time the amount of time required to permute the traces (the analysis steps)
+% TODO: Evaluation: Make the case that this isn't a slow part of the system
+% TODO: Evaluation: Count how many anomalies could be injected into a particular trace
+% TODO: Evaluation: How many of these are useful
+% TODO: Evaluation: Threats to validity
+%     Programming languages of test applications
+
 \section{Evaluation}
 
     In order to measure its efficacy CrashSimulator was implemented in Python. Python was chosen in order to facilitate
