--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -1,3 +1,5 @@
+% TODO: Introduction: Explicitly state the research questions we want to answer in the introduction
+% TODO: Put a bulleted list of contributions into the introduction
 \section{Introduction}
 
     One major hurdle in developing robust applications is anticipating and dealing with edge conditions and faults that
