--- a/CrashSimulator.tex
+++ b/CrashSimulator.tex
@@ -1,3 +1,4 @@
+% TODO: Template: Fix the title information
 %% This style is provided for the ICSE 2015 main conference,
 %% ICSE 2015 co-located events, and ICSE 2015 workshops.
 
