Added "contributions" and "research questions"

--- a/CSIntro.tex
+++ b/CSIntro.tex
@@ -65,3 +65,19 @@
     identified previously and reports to the developer whether or not the application successfully handled them or not.
     For example, CrashSimulator might identify a system call that rarely fails and, as a result, this failure is rarely
     handled in practice. It can then inject this failure and observe the results.
+
+    CrashSimulator makes the following contributions:
+
+    \begin{enumerate}
+        \item{CrashSimulator is able to identify environment-related faults that can be easily overlooked.}
+        \item{CrashSimulator is able to reproduce faults predicted by other tools}
+        \item{CrashSimulator is able to test applications in a language independent manner}
+    \end{enumerate}
+
+    This work hopes to answer the following questions about CrashSimulator's operation:
+
+    \begin{enumerate}
+        \item{Is CrashSimulator successful in identifying flaws in new and existing applications?}
+        \item{Is CrashSimulator able to generate tests in a performant manner?}
+        \item{Is CrashSimulator able to execute tests in a performant manner?}
+    \end{enumerate}
